--- a/sass/_jobResult.scss
+++ b/sass/_jobResult.scss
@@ -3,9 +3,11 @@ $color_prime: #3a4052;
 $color_grey: #e2e2e2;
 $color_grey_dark: #a2a2a2;
 
+.hidden {
+    display: none;
+}
+
 .blog-card {
-    display: flex;
-    flex-direction: column;
     margin: 1rem auto;
     box-shadow: 0 3px 7px -1px rgba(#000, 0.1);
     margin-bottom: 1.6%;
@@ -15,27 +17,27 @@ $color_grey_dark: #a2a2a2;
     border-radius: 5px;
     overflow: hidden;
     z-index: 0;
-    max-width: 700px;
+    max-width: 1000px;
     .description {
         padding: 1rem;
         background: $color_white;
         position: relative;
         z-index: 1;
         h1,
-        h2 {
+        h3 {
             font-family: Poppins, sans-serif;
         }
         h1 {
             line-height: 1;
-            margin: 0;
+            margin-top: 30px;
             font-size: 1.7rem;
         }
-        h2 {
+        h3 {
             font-size: 1rem;
             font-weight: 300;
             text-transform: uppercase;
             color: $color_grey_dark;
-            margin-top: 5px;
+            margin-top: 10px;
         }
         .read-more {
             text-align: right;
@@ -51,15 +53,6 @@ $color_grey_dark: #a2a2a2;
         margin: 1rem 0 0;
         &:first-of-type {
             margin-top: 1.25rem;
-            &:before {
-                content: '';
-                position: absolute;
-                height: 5px;
-                background: $color_prime;
-                width: 35px;
-                top: -0.75rem;
-                border-radius: 3px;
-            }
         }
     }
     &:hover {
