--- a/sass/_searchForm.scss
+++ b/sass/_searchForm.scss
@@ -19,7 +19,8 @@ $primary-color: #3a4052;
     }
 }
 
-#search-bar {
+#search-bar-city,
+#search-bar-keyword {
     margin: 0 auto;
     width: 100%;
     height: 45px;
