--- a/sass/style.scss
+++ b/sass/style.scss
@@ -24,13 +24,17 @@ body {
     text-align: center;
     p {
         font-size: 1.2rem;
-        max-width: 600px;
+        max-width: 800px;
         margin: auto;
     }
     h2 {
         margin: 30px 0;
         color: $primary-color;
     }
+}
+
+.rect:hover {
+    opacity: 0.5;
 }
 
 .social a {
